evals/swebench/runs/coder-reap-25b-lite/score_logs/matplotlib__matplotlib-24265.test.log
# pytest -rA lib/matplotlib/tests/test_style.py
============================= test session starts ==============================
platform linux -- Python 3.11.14, pytest-9.0.3, pluggy-1.6.0
rootdir: /tmp/swebench-work2/matplotlib__matplotlib-24265
configfile: pytest.ini
collected 0 items / 1 error

==================================== ERRORS ====================================
_____________ ERROR collecting lib/matplotlib/tests/test_style.py ______________
/tmp/swebench-venvs/matplotlib__matplotlib-24265/lib/python3.11/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/tmp/swebench-venvs/matplotlib__matplotlib-24265/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/home/letsrtfm/.local/share/uv/python/cpython-3.11.14-linux-x86_64-gnu/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
/tmp/swebench-venvs/matplotlib__matplotlib-24265/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:197: in exec_module
    exec(co, module.__dict__)
lib/matplotlib/tests/test_style.py:10: in <module>
    from matplotlib import pyplot as plt, style
lib/matplotlib/pyplot.py:55: in <module>
    from matplotlib import rcsetup, style
lib/matplotlib/style/__init__.py:1: in <module>
    from .core import available, context, library, reload_library, use
E     File "/tmp/swebench-work2/matplotlib__matplotlib-24265/lib/matplotlib/style/core.py", line 189
E       else:
E       ^^^^
E   SyntaxError: invalid syntax
=========================== short test summary info ============================
ERROR lib/matplotlib/tests/test_style.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.20s ===============================
